removed height and width 100% causing issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@ html {
     outline: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    height: 100%;
-    width: 100%;
-  }
+}
   
 *, *:before, *:after {
     box-sizing: inherit;
@@ -17,22 +15,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #F5F7FB;
-    height: 100%;
-    width: 100%;
     font-family: 'Karla', sans-serif;
-}
-
-#root {
-    height: 100%;
-    width: 100%;
-}
-
-main {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .blob1 {
